Development
* Adjusted the gantry height to 55mm for the Ultimaker, as 60mm was 3mm to high for the default setup with an V2 hotend.
* Added disallowed zones for UM2.

Ultimaker2 - Firmware update - 13.11-1
* Slightly tweaked the SD-Card error problems.
* Added LED settings to Tune menu
* Start heating the nozzles when the bed is nearing its final temperature, so the nozzles do not sit hot.
* Make sure all commands are finished before starting a print or changing material. This could cause issues when you where too fast.

13.11
* Added imageToMesh tool to load images as 3D height maps
* Fixed Z support distance when using "everywhere" support.
* Updated to new version of clipper to fix rare slicing bugs that resulted in odd paths.
* Fixed "Reset profile" so it no longer resets the machine settings.
* Updated support material so support is smoother and has less small sections which are hard to remove.
* Fixed start-gcode when using dual-support material
* Change how the fan is handled on lower layer to improve UM2 printing.
* Fix that retraction is enabled when selecting UM2 or RepRap.
* Scale down very large models, or scale up very tiny models automagicly.
* Fixed skirt and brim to go around the support instead of under it.
* Added spiralize mode

Ultimaker2 - Firmware update - 13.10-5
* Fixed SD-Card read error
* Added feature to store your own material presets
* Fixed the 280C ABS problem, causing a temperature sensor error

13.10
* Added YouMagine upload button
* Added multiple machine support
* Redone support material